wil-playground-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: wil-playground
  ports:
  - port: 3000
    targetPort: 3000
